<?xml version="1.0"?>
<package format="2">
  <name>message_demo</name>
  <version>0.0.0</version>
  <description>The message_demo package</description>

  <maintainer email="pengshuxue@todo.todo">pengshuxue</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

    <!-- 使用ros_message，在下面加入下面这两行 -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <export>

  </export>
</package>
